--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="my_interested_fans">粉丝中你可能感兴趣的人</string>
     <string name="more">更多</string>
     <string name="comment_hint">随便说点奇格的</string>
+    <string name="load_more">上拉加载更多</string>
 </resources>
